# nsspain2023workshop

./: Readme.md  deps.sh
fetch_dependencies/: Cargo.toml
presentation.hyper/: Contents.md  settings.toml
project1/: Readme.md
project1/src/: main.rs
project2/: Cargo.toml  Readme.md  tweets.json
project2/src/: main.rs  project.rs  utils.rs
